Добавлен список авторов Реализована зависимость между списком книг и авторов. Добавлено создание, редактирование, удаление, представление данных автора

--- a/MvcBook/Views/Books/Index.cshtml
+++ b/MvcBook/Views/Books/Index.cshtml
@@ -56,7 +56,8 @@
                 @Html.DisplayFor(modelItem => item.ReleaseDate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Autor)
+                @Html.DisplayFor(modelItem => item.Autor.Name)
+
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
