--- a/MvcBook/Views/Books/Create.cshtml
+++ b/MvcBook/Views/Books/Create.cshtml
@@ -24,8 +24,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Autor" class="control-label"></label>
-                <input asp-for="Autor" class="form-control" />
-                <span asp-validation-for="Autor" class="text-danger"></span>
+                <select asp-for="AutorId" class="form-control" asp-items="Model.Authors"></select>
+                <span asp-validation-for="AutorId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
