--- a/MvcBook/Views/Books/Index.cshtml
+++ b/MvcBook/Views/Books/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Book";
+    var returnUrl = Context.Request.Path.Value;
 }
 
 <h1>Books</h1>
@@ -46,7 +47,9 @@
             <th></th>
         </tr>
     </thead>
+
     <tbody>
+
 @foreach (var item in Model.Books) {
         <tr>
             <td>
@@ -56,15 +59,14 @@
                 @Html.DisplayFor(modelItem => item.ReleaseDate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Autor.Name)
-
+                <a asp-controller="Authors" asp-action="Details" asp-route-returnurl="@returnUrl" asp-route-id="@item.Autor.Id">@item.Autor.Name</a>
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
