--- a/MvcBook/Views/Authors/Delete.cshtml
+++ b/MvcBook/Views/Authors/Delete.cshtml
@@ -5,8 +5,15 @@
 }
 
 <h1>Delete</h1>
+@if (!Model.InBook)
+{
+    <h3>Are you sure you want to delete this?</h3>
+}
+else
+{
+<h3>>Невозможно удалить автора т.к. на него ссылается книга.</h3>
+}
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Author</h4>
     <hr />
@@ -31,10 +38,13 @@
         </dd>
 
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        @if (!Model.InBook)
+        {
+            @:<input type="submit" value="Delete" class="btn btn-danger" /> |
+        }
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
