Добавлен список Books в представление Authors/Details

--- a/MvcBook/Views/Authors/Delete.cshtml
+++ b/MvcBook/Views/Authors/Delete.cshtml
@@ -11,7 +11,7 @@
 }
 else
 {
-<h3>>Невозможно удалить автора т.к. на него ссылается книга.</h3>
+<h3>Невозможно удалить автора т.к. на него ссылается книга.</h3>
 }
 
 <div>
