--- a/MvcBook/Views/Authors/Details.cshtml
+++ b/MvcBook/Views/Authors/Details.cshtml
@@ -9,35 +9,50 @@
 <div>
     <h4>Author</h4>
     <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
+    <div class="row">
+        <div class="col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class="col-sm-10">
+        </div>
+        <div class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class="col-sm-2">
+        </div>
+        <div class="col-sm-2">
             @Html.DisplayNameFor(model => model.Age)
-        </dt>
-        <dd class="col-sm-10">
+        </div>
+        <div class="col-sm-10">
             @Html.DisplayFor(model => model.Age)
-        </dd>
-        <dt class = "col-sm-2">
+        </div>
+        <div class="col-sm-2">
             @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class = "col-sm-10">
+        </div>
+        <div class="col-sm-10">
             @Html.DisplayFor(model => model.Email)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    @if (!string.IsNullOrEmpty(Model.ReturnUrl))
-    {
-        <a href="@Model.ReturnUrl">Back to Books</a>
-    }
-    else
-    {
-        <a asp-action="Index">Back to List</a>
-    }
+        </div>
+        <div class="col-sm-2">
+            @Html.DisplayNameFor(model => model.BooksforAuthor)
+
+            <div>
+                <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+                @if (!string.IsNullOrEmpty(Model.ReturnUrl))
+                {
+                    <a href="@Model.ReturnUrl">Back to Books</a>
+                }
+                else
+                {
+                    <a asp-action="Index">Back to List</a>
+                }
+            </div>
+        </div>
+        <div class="col-sm-10">
+            @foreach (var item in Model.BooksforAuthor)
+            {
+                <div class="row">
+                    <div class="col">
+                        @Html.DisplayFor(modelItem => item.Title)
+                    </div>
+                </div>
+            }
+        </div>
+       
+    </div>
 </div>
