--- a/MvcBook/Views/Shared/_Layout.cshtml
+++ b/MvcBook/Views/Shared/_Layout.cshtml
@@ -11,9 +11,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3" style="color:#232020">
             <div class="container">
-                <a class="navbar-brand" asp-controller="Books" asp-action="Index">Мое приложение</a>
+                <a class="navbar-brand" asp-controller="Books" asp-action="Index"><img src="~/images/books.png" alt="books.png"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -21,10 +21,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Index">Книги</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Index"><span class=" fa fa-book"></span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Authors" asp-action="Index">Авторы</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Authors" asp-action="Index"><span class=" fa fa-user-friends"></span></a>
                         </li>
                     </ul>
                 </div>
