--- a/MvcBook/wwwroot/css/site.css
+++ b/MvcBook/wwwroot/css/site.css
@@ -63,6 +63,7 @@ body {
     margin-bottom: 60px;
 
 }
+
 .footer {
   position: absolute;
   bottom: 0;
@@ -70,3 +71,50 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+img {
+    width: 24px;
+    height: auto;
+}
+
+.bg-white {
+    background-color: #232020 !important;
+}
+
+.fa-user-friends{
+    color: white;
+}
+
+.fa-edit{
+    color: black;
+}
+
+
+.fa-book{
+    color: white;
+}
+
+.linkclass {
+    color: #c5c5c5;
+}
+
+.linkclass:link {
+    color: #c5c5c5;
+    text-decoration: none
+}
+
+.linkclass:visited {
+    color: #c5c5c5;
+    text-decoration: none
+}
+
+.linkclass:hover {
+    color: blue;
+    text-decoration: none
+}
+
+.linkclass:active {
+    color: red;
+    text-decoration: none
+}
+
