--- a/MvcBook/Views/Authors/Details.cshtml
+++ b/MvcBook/Views/Authors/Details.cshtml
@@ -1,39 +1,48 @@
 ﻿@model MvcBook.Models.Autor
 
 @{
+    Layout = null;
     ViewData["Title"] = "Сведения";
 }
 
-<h1>Сведения</h1>
 
-<div>
-    <h4>Автор</h4>
-    <hr />
-    <div class="row">
-        <div class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </div>
-        <div class="col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </div>
-        <div class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Age)
-        </div>
-        <div class="col-sm-10">
-            @Html.DisplayFor(model => model.Age)
-        </div>
-        <div class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </div>
-        <div class="col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </div>
+<div class="modal-content">
+    <div class="modal-body">
+        <div class="row">
+            <div class="col-sm-6">
+                @Html.DisplayNameFor(model => model.Name)
+            </div>
+            <div class="col-sm-6">
+                @Html.DisplayFor(model => model.Name)
+            </div>
+            <div class="col-sm-6">
+                @Html.DisplayNameFor(model => model.Age)
+            </div>
+            <div class="col-sm-6">
+                @Html.DisplayFor(model => model.Age)
+            </div>
+            <div class="col-sm-6">
+                @Html.DisplayNameFor(model => model.Email)
+            </div>
+            <div class="col-sm-6">
+                @Html.DisplayFor(model => model.Email)
+            </div>
 
-        <div class="col-sm-2">
+            <div class="col-6">
 
-            @Html.DisplayNameFor(model => model.BooksforAuthor)
-
-            <div>
+                @Html.DisplayNameFor(model => model.BooksforAuthor)
+            </div>
+            <div class="col-sm-6">
+               
+                    @foreach (var item in Model.BooksforAuthor)
+                    {
+                        <li>
+                            @Html.DisplayFor(modelItem => item.Title)
+                        </li>
+                    }
+               
+            </div>
+            <div class="col-12">
                 <a asp-action="Edit" asp-route-id="@Model.Id"><span class=" fa fa-edit"></span></a> |
                 @if (!string.IsNullOrEmpty(Model.ReturnUrl))
                 {
@@ -44,17 +53,8 @@
                     <a asp-action="Index"><span class=" fa fa-arrow-left"></span></a>
                 }
             </div>
+
         </div>
-        <div class="col-sm-10">
-            <ul>
-                @foreach (var item in Model.BooksforAuthor)
-                {
-                <li>                   
-                            @Html.DisplayFor(modelItem => item.Title)                       
-                </li>
-                }
-            </ul>
-        </div>
-       
     </div>
 </div>
+
