--- a/MvcBook/Views/Authors/Index.cshtml
+++ b/MvcBook/Views/Authors/Index.cshtml
@@ -5,10 +5,12 @@
 }
 
 <h1>Авторы</h1>
-
+<div id="modDialog" class="modal fade">
+    
+</div>
 
 <p>
-    <a asp-action="Create"><span class=" fa fa-plus"></span></a>
+    <a class="openmodal" asp-action="Create"><span class=" fa fa-plus"></span></a>
 </p>
 <table class="table">
     <thead>
@@ -30,8 +32,8 @@
         {
         <tr>
             <td>
-                <a asp-action="Details" asp-route-id="@item.Id"><span class=" fa fa-eye"></span></a> |
-                <a asp-action="Edit" asp-route-id="@item.Id"><span class=" fa fa-edit"></span></a>
+                <a asp-action="Details" asp-route-id="@item.Id" class="openmodal"><span class=" fa fa-eye"></span></a> |
+                <a asp-action="Edit" asp-route-id="@item.Id" class="openmodal"><span class=" fa fa-edit"></span></a>
 
             </td>
             <td>
@@ -45,7 +47,7 @@
             </td>
             <td>
                 
-                <a asp-action="Delete" asp-route-id="@item.Id"><span class=" fa fa-trash"></span></a>
+                <a asp-action="Delete" asp-route-id="@item.Id" class="openmodal"><span class=" fa fa-trash"></span></a>
             </td>
         </tr>
         }
