--- a/MvcBook/Views/Books/Create.cshtml
+++ b/MvcBook/Views/Books/Create.cshtml
@@ -6,7 +6,7 @@
 }
 
 
-
+<div class="modal-dialog  modal-dialog-centered">
 <div class="modal-content">
     <div class="modal-body">
         <div class="row">
@@ -33,6 +33,7 @@
                         <input asp-for="Price" class="form-control" />
                         <span asp-validation-for="Price" class="text-danger"></span>
                     </div>
+                    <hr />
                     <div class="form-group">
                         <input type="submit" value="Создать" class="btn btn-primary sub" />
                         <a asp-action="Index" style="float: right; margin-right: 25px; margin-top: 7px;"><span class="fa fa-arrow-left"></span></a>
@@ -42,7 +43,7 @@
         </div>
     </div>
 </div>
-
+</div>
 
 @section Scripts {
     @*@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}*@
