--- a/MvcBook/Views/Authors/Index.cshtml
+++ b/MvcBook/Views/Authors/Index.cshtml
@@ -5,13 +5,24 @@
 }
 
 <h1>Авторы</h1>
-<div id="modDialog" class="modal fade">
-    
-</div>
+
 
 <p>
     <a class="openmodal" asp-action="Create"><span class=" fa fa-plus"></span></a>
 </p>
+<form asp-controller="Authors" asp-action="Index" method="get">
+    <p>
+        Имя: <input type="text" asp-for="searchauthor">
+
+        Возраст:  <select asp-for="searchage" asp-items="Model.Ages">
+            <option value="">Все</option>
+        </select>
+     
+
+        <button type="submit"> <span class=" fa fa-search"></span></button>
+
+    </p>
+</form>
 <table class="table">
     <thead>
         <tr>
@@ -54,4 +65,6 @@
     </tbody>
 </table>
 
+<div id="modDialog" class="modal fade">
 
+</div>
