--- a/MvcBook/Views/Shared/_Layout.cshtml
+++ b/MvcBook/Views/Shared/_Layout.cshtml
@@ -33,6 +33,14 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            <div class="row">
+                <div class="col-10">
+                    <h1>@ViewData["Title"]</h1>
+                </div>
+                <div class="col-2 cart">
+                    <h1> <a asp-controller="Purchases" asp-action="Index"><span class=" fa fa-shopping-cart"></span></a></h1>
+                </div>
+            </div>
             @RenderBody()
         </main>
     </div>
