--- a/MvcBook/Views/Shared/_Layout.cshtml
+++ b/MvcBook/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@inject MvcBook.Controllers.PurchasesService PurchasesService
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -38,6 +40,7 @@
                     <h1>@ViewData["Title"]</h1>
                 </div>
                 <div class="col-2 cart">
+                    @(await PurchasesService.GetCount())
                     <h1> <a asp-controller="Purchases" asp-action="Index"><span class=" fa fa-shopping-cart"></span></a></h1>
                 </div>
             </div>
