--- a/MvcBook/Views/Purchases/Index.cshtml
+++ b/MvcBook/Views/Purchases/Index.cshtml
@@ -5,81 +5,101 @@
 }
 
 
-        <h1 class="float-right"> <a asp-controller="PurchasesHistory" asp-action="Index"><span class=" fa fa-history"></span></a></h1>
-    
+
+
 <div id="modDialog" class="modal fade"> </div>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Purchases[0].Book.Title)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Purchases[0].Book.Autor)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Purchases[0].Book.Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Purchases[0].Ammount)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Purchases[0].Price)
-            </th>
-        </tr>
-    </thead>
 
-    <tbody>
-
-        @foreach (var item in Model.Purchases)
-        {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Book.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Book.Autor.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Book.Price)
-            </td>
-            <td>
-                <div class="row">
-                    <div class="col-2" style="margin-left:15px;">
-                        @Html.DisplayFor(modelItem => item.Ammount)
-                    </div>
-                    <div class="col-2">
-                        <a class="openmodal" asp-action="Edit" asp-route-id="@item.Id"><span class=" fa fa-edit"></span></a>
-                    </div>
-                </div>
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                <a asp-action="Delete" asp-route-id="@item.Id" class="openmodal"><span class=" fa fa-times"></span></a>
-            </td>
-        </tr>
-        }
-
-    </tbody>
-</table>
 <div class="row">
-    <div class="col-10">
-        <div class="float-right">
-            <h2>Итого:</h2>
-            <h3>@Html.DisplayFor(modelItem => Model.Sum)</h3>
+    <div>
+        <input type="checkbox" class="checkbutton" />
+    </div>
+    <div class="col-2">
+        Выбрать все
+    </div>
+</div>
+        
+
+<br />
+<form method="post">
+    <table class="table">
+        <thead>
+            <tr>
+                <th></th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Purchases[0].Book.Title)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Purchases[0].Book.Autor)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Purchases[0].Book.Price)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Purchases[0].Ammount)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Purchases[0].Price)
+                </th>
+            </tr>
+        </thead>
+
+        <tbody>
+
+            @foreach (var item in Model.Purchases)
+            {
+                <tr>
+                    <td>
+                        <input type="checkbox" class="purchasecheck" name="ids" value="@item.Id" checked />
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Book.Title)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Book.Autor.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Book.Price)
+                    </td>
+                    <td>
+                        <div class="row">
+                            <div class="col-2" style="margin-left:15px;">
+                                @Html.DisplayFor(modelItem => item.Ammount)
+                            </div>
+                            <div class="col-2">
+                                <a class="openmodal" asp-action="Edit" asp-route-id="@item.Id"><span class=" fa fa-edit"></span></a>
+                            </div>
+                        </div>
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Price)
+                    </td>
+                    <td>
+                        <a asp-action="Delete" asp-route-id="@item.Id" class="openmodal"><span class="fa fa-times"></span></a>
+                    </td>
+                </tr>
+            }
+
+        </tbody>
+    </table>
+    <div class="row" style="justify-content: flex-end;">
+        <div class="col-12">
+            <div class="float-right">
+                <h2>Итого:</h2>
+                <h3>@Html.DisplayFor(modelItem => Model.Sum)</h3>
+            </div>
+        </div>
+        <div class="form-group col-1" style="margin-top: 10px;">
+            <input asp-action="Buy" type="submit" value="Купить" class="btn btn-primary buy fordisabled" style="background-color:#1bc24b; border-color:#009822;"  />
+        </div>
+        <div class="form-group col-1" style="margin-top:10px;">
+            <input asp-action="Clear" type="submit" value="Очистить все" class="btn btn-light confirmbutton" style="border-color: #cecece;"/>
         </div>
     </div>
-    <form method="post">
-        <div class="form-group" style="margin-top:10px;">
-            <input asp-action="Buy" type="submit" value="Купить" class="btn btn-primary buy" style="background-color:#1bc24b;" />
-        </div>
-    </form>
-</div>
+</form>
 @section Scripts{
     <script>
+        $('.cart').removeClass('d-flex');
         $('.cart').hide();
     </script>
 }
