--- a/MvcBook/Views/Shared/_Layout.cshtml
+++ b/MvcBook/Views/Shared/_Layout.cshtml
@@ -36,16 +36,22 @@
     <div class="container">
         <main role="main" class="pb-3">
             <div class="row">
-                <div class="col-10">
+                <div class="col-9">
                     <h1>@ViewData["Title"]</h1>
                 </div>
-                <div class="col-2 cart">
-                    @(await PurchasesService.GetCount())
+                <div class="col d-flex align-items-center">
                     <h1> <a asp-controller="Purchases" asp-action="Index"><span class=" fa fa-shopping-cart"></span></a></h1>
+                    @(await PurchasesService.GetCount())
+                </div>
+                <div class="col d-flex align-items-center">
+                    <h1> <a asp-controller="PurchasesHistory" asp-action="Index"><span class=" fa fa-history"></span></a></h1>
+                </div>
+                <div class="col d-flex align-items-center">
+                    <h1> <a asp-controller="PurchasesHistory" asp-action="RefundedIndex"><span class=" fa fa-reply"></span></a></h1>
                 </div>
             </div>
-            @RenderBody()
-        </main>
+                @RenderBody()
+</main>
     </div>
 
     <footer class="border-top footer text-muted">
